.tanzu/config/httproute-hello-world.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  annotations:
    apps.tanzu.vmware.com/promotable: ""
    apps.tanzu.vmware.com/promote-group: ContainerApp/hello-world
  name: hello-world-http-route
spec:
  parentRefs:
  - group: networking.tanzu.vmware.com
    kind: Entrypoint
    name: hello-world
  rules:
  - backendRefs:
    - kind: Service
      name: hello-world
      port: 8080
